13986/Prevent image stretching on reservation

--- a/src/targets/sandman/styles/views/reservation.less
+++ b/src/targets/sandman/styles/views/reservation.less
@@ -202,6 +202,9 @@ reservation-widget {
         max-height: 117px;
         width: 100%;
         border: 2px solid @c-light-grey;
+        .viewport-mobile & {
+          max-height:initial;
+        }
       }
     }
   }
